--- a/sites/all/themes/apteka/ds.html
+++ b/sites/all/themes/apteka/ds.html
@@ -1,12 +1,7 @@
-<div class="department-item first">
-    <div class="name">Розничный отдел</div>
-    <div class="phone"><a href="tel:8 (3452) 34 98 54">8 (3452) 34 98 54</a></div>
-</div>
-<div class="department-item second">
-    <div class="name">Отдел доставки</div>
-    <div class="phone"><a href="tel:8 (3452) 94 84 06">8 (3452) 94 84 06</a></div>
-</div>
-<div class="department-item last">
-    <div class="name">Оптовый отдел</div>
-    <div class="phone"><a href="tel:8 (3452) 93 92 38">8 (3452) 93 92 38</a></div>
-</div>
+
+
+<div class="order-title">Информация о покупателе</div>
+<p>Пожалуйста, указывайте достоверную электронную почту, на нее мы направляем информацию о вашем заказе.</p>
+
+
+html not-front logged-in no-sidebars page-checkout page-checkout- page-checkout-5 section-checkout admin-menu
