added theming pages

--- a/sites/all/themes/apteka/ds.html
+++ b/sites/all/themes/apteka/ds.html
@@ -1,14 +1,27 @@
-<p>Доставка <a href="http://www.apteka72.com/katalog" id="товары" title="Товары Зеленой аптечки"
-               type="товары">товаров</a> осуществляется почтой России посылкой с наложенным платежом. Минимальная сумма
-    заказа 1000 рублей. <a href="http://www.apteka72.com" id="товар" title="Выбор товаров" type="выбор товаров">Выбирайте</a>
-    и заказывайте и мы в течении 3-х дней отправим вам посылку. Оплата товаров на почте при получении посылки. Стоимость
-    доставки посылки по России составляет 400 рублей.&nbsp; Если стоимость заказанных товаров составит более 3000
-    рублей, то товары мы сможем отправить только по предоплате. Реквизиты вам будут отправлены на вашу электронную
-    почту. Обязательно проверяйте вашу эл. почту, так как все уведомления о приеме заказа, его отправке с указанием
-    номера посылки и т.д., мы отправляем только на эл.почту указанную вами при заказе. Звонков на телефоны мы не делаем,
-    без необходимости.</p><p>Если вы находитесь в городе Тюмени и желаете, чтобы товары вам доставили на дом. То также,
-    выбираете товары на <a href="http://www.apteka72.com" target="_blank">сайте</a> и указываете при оформлении заказа
-    &quot;Доставка курьером по Тюмени&quot;, стоимость доставки составит 200 рублей. Доставка в течении 2х дней.</p><p class="im-wra">
-    <a href="http://apteka72.com/dostavka"><img alt="Доставка" longdesc="Доставка товаров по России"
-                                                src="/sites/default/files/ds.jpg" style="width: 769px; height: 397px;"
-                                                title="Доставка от Зеленой Аптечки"/></a></p>
+
+
+
+
+
+
+
+
+
+<div class="content">
+    <div class="item first">
+        <div class="name">Ежедневно</div>
+        <div class="phone">с 9-00 до 19-00</div>
+    </div>
+    <div class="item third">
+        <div class="name">Отдел доставки</div>
+        <div class="phone"><a href="tel:8 (3452) 94 84 06">8 (3452) 94 84 06</a></div>
+    </div>
+    <div class="item second">
+        <div class="name">Розничный отдел</div>
+        <div class="phone"><a href="tel:8 (3452) 34 98 54">8 (3452) 34 98 54</a></div>
+    </div>
+    <div class="item last">
+        <div class="name">Оптовый отдел</div>
+        <div class="phone"><a href="tel:8 (3452) 93 92 38">8 (3452) 93 92 38</a></div>
+    </div>
+</div>
