added custom module sy_commerce_add

--- a/sites/all/themes/apteka/ds.html
+++ b/sites/all/themes/apteka/ds.html
@@ -7,21 +7,6 @@
 
 
 
-<div class="content">
-    <div class="item first">
-        <div class="name">Ежедневно</div>
-        <div class="phone">с 9-00 до 19-00</div>
-    </div>
-    <div class="item third">
-        <div class="name">Отдел доставки</div>
-        <div class="phone"><a href="tel:8 (3452) 94 84 06">8 (3452) 94 84 06</a></div>
-    </div>
-    <div class="item second">
-        <div class="name">Розничный отдел</div>
-        <div class="phone"><a href="tel:8 (3452) 34 98 54">8 (3452) 34 98 54</a></div>
-    </div>
-    <div class="item last">
-        <div class="name">Оптовый отдел</div>
-        <div class="phone"><a href="tel:8 (3452) 93 92 38">8 (3452) 93 92 38</a></div>
-    </div>
-</div>
+<div class="item">Daten.</div>
+<div class="item">Kreativ.</div>
+<div class="item">Kommunizieren.</div>
